# sqlalchemy-fts5

./: LICENSE  README.md  pyproject.toml
src/sqlalchemy_fts5/: __init__.py  _ddl.py  _expression.py  _functions.py  _table.py
tests/: conftest.py  test_ddl.py  test_expression.py  test_functions.py  test_hypothesis.py  test_integration.py  test_propstore_shapes.py
