[project]
name = "sqlalchemy-fts5"
version = "0.1.0"
description = "SQLite FTS5 support for SQLAlchemy — virtual table DDL, table-level MATCH, bm25/highlight/snippet, content sync, and typed ORM mapping."
readme = "README.md"
authors = [
    { name = "Christopher Toth", email = "q.alpha@gmail.com" }
]
requires-python = ">=3.12"
license = "MIT"
keywords = ["sqlalchemy", "sqlite", "fts5", "full-text-search"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Database",
    "Topic :: Database :: Front-Ends",
    "Typing :: Typed",
]
dependencies = [
    "sqlalchemy>=2.0",
]

[build-system]
requires = ["uv_build>=0.8.8,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "hypothesis",
    "pyright",
]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "strict"
